[package]
name = "esmy"
version = "0.1.0"
authors = ["Anton Hägerstrand <anton.hagerstrand@gmail.com>"]

[dependencies]
byteorder = "0.5"
time = "0.1"
fst = "0.2"
rand = "0.3"
walkdir = "1"
quickcheck = "0.3"
memmap = "0.5"
serde_json = "1.0"
unicode-segmentation = "1.1.0"

[lib]
name = "esmy"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"
