[package]
name = "esmy"
version = "0.1.0"
authors = ["Anton Hägerstrand <anton.hagerstrand@gmail.com>"]

[dependencies]
byteorder = "0.5"
time = "0.1"
fst = "0.3"
rand = "0.3"
walkdir = "1"
proptest = "0.5.1"
memmap = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rmp-serde = "0.13"
unicode-segmentation = "1.1.0"
jobsteal = "0.5.1"
afsort = "0.1.1"

[lib]
name = "esmy"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[profile.release]
debug = true

[profile.test]
# This is faster, since the tests are CPU-intensive
opt-level = 3
