[package]
name = "esmy"
version = "0.1.0"
authors = ["Anton Hägerstrand <anton.hagerstrand@gmail.com>"]

[dependencies]
byteorder = "1"
rayon = "1.0"
fst = "0.3"
# Seems to be changing in 0.5.0
rand = "0.4"
walkdir = "2"
proptest = "0.6.0"
serde = "1.0"
serde_derive = "1.0"
rmp-serde = "0.13"
unicode-segmentation = "1.2.0"
threadpool = "1.0"
afsort = "0.3.0"

