[package]
name = "esmy"
version = "0.1.0"
authors = ["Anton Hägerstrand <anton.hagerstrand@gmail.com>"]

[dependencies]
indexmap = "1"
fasthash = "0.3"
smallvec = "0.6"
byteorder = "1"
rayon = "1.0"
core_affinity = "0.5.9"
fst = "0.3"
# Seems to be changing in 0.5.0
rand = "0.4"
walkdir = "2"
proptest = "0.8.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rmp-serde = "0.13"
unicode-segmentation = "1.2.0"
flate2 = "1.0"
tempfile = "3"
lazy_static = "1.1"
num_cpus = "1.8.0"
