[package]
name = "esmy"
version = "0.1.0"
authors = ["Anton Hägerstrand <anton.hagerstrand@gmail.com>"]

[dependencies]
indexmap = "2.0.0"
fasthash = "0.4.0"
smallvec = "1.11.0"
byteorder = "1"
rayon = "1.0"
core_affinity = "0.8.1"
fst = "0.4.7"
# Seems to be changing in 0.5.0
rand = "0.8.5"
walkdir = "2"
proptest = "1.2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rmp-serde = "1.1.2"
unicode-segmentation = "1.2.0"
flate2 = "1.0"
lz4 = "1.23.1"
tempfile = "3"
lazy_static = "1.1"
num_cpus = "1.8.0"
bit-vec = "0.6.3"
memmap = "0.7.0"
