[package]
name = "esmy_cli"
version = "0.1.0"
authors = ["Anton Hägerstrand <anton.hagerstrand@gmail.com>"]

[dependencies]
esmy = { version = "0.1.0", path = "../esmy" }
rayon = "1"
time = "0.1"
docopt = "1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[[bin]]
name = "esmy"
path = "src/main.rs"
